freakin commit this

--- a/Events.html
+++ b/Events.html
@@ -1,9 +1,4 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -115,7 +110,7 @@ Food in general is tough to make money on. Restaurants have long relied on the m
 
 Forbes, for that very reason, noted in 2011 that dessert is often a great deal — for diners.
 
-But it's also made serving it a growing pain for many restaurants. The cost of serving a house-prepared line of desserts includes employing a pastry chef and dedicated space in the kitchen to the craft. Some restaurants, instead of using pastry chefs, have opted to serve simpler desserts made by line cooks, while others "have given up entirely" and outsourced their sweets, according to Kliman.</p>
+But it's also made serving it a growing pain for many restaurants. The cost of serving a house-prepared line of desserts includes employing a pastry chef and dedicated space in the kitchen to the craft. Some restaurants, instead of using pastry chefs, have opted to serve simpler desserts made by line cooks, while others "have given up entirely" and outsourced their sweets, according to Kliman.</i></p>
 				</div>
 		</div>
 		
