--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,4 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -82,11 +77,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <center>
 <div class="grids">
 	<h4>The Restaurant "Rosmarito"</h4><br>
-	<span>marmora road</span><br>
-	<span>glasgow,do4 89gr</span><br>
-	<span>Freephone: +1 800 559 6580</span>?<br>
-	<span>Telephone: +1 959 603 6035</span> <br>
-	<span>FAX: +1 800 889 9898</span>
+	<span>Marakosa</span><br>
+	<span>Franciskapolle </span><br>
+	<span>Telephone: +019 484 178 2811 </span> <br>
+	<span>FAX: +019 237 198 2371</span>
 	<span>email:<a href=""> </a></span>
 	</div>
 	</div>
