--- a/Events.html
+++ b/Events.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Restaurant Website Template | Events :: w3layouts</title>
+<title>Rosmarito</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
 <link href="css/bjqs.css" rel="stylesheet" type="text/css"  media="all" />
