--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Restaurant Website Template | Home :: w3layouts</title>
+<title>Rosmarito</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
 <link href="css/bjqs.css" rel="stylesheet" type="text/css"  media="all" />
@@ -66,7 +66,6 @@
 				<li class="submemu"><a href="Events.html">Events</a></li>
 				<li class="submemu"><a href="Gallery.html">Gallery</a></li>
 				<li class="submemu"><a href="Menu.html">Menu</a></li>
-				<li class="submemu"><a href="contact.html">News</a></li>
 				<li class="submemu"><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
