--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 			<div class="grid1">
 				<h2>Welcome!</h2>
 				<img src="images/1page_img1.jpg">
-				<p>The Rio is a fish restaurant catering for the take away trade as well providing restaurant facilities. The fish as you would expect is freshly caught and you can tell!.,. Situated about 50 yards from the harbour side, you are assured of quality meal in this lovely little place.They try very hard to make you welcome and you can feel it - enjoy.</p>
+				<p><i></i>The Rio is a fish restaurant catering for the take away trade as well providing restaurant facilities. The fish as you would expect is freshly caught and you can tell!.,. Situated about 50 yards from the harbour side, you are assured of quality meal in this lovely little place.They try very hard to make you welcome and you can feel it - enjoy.</i></p>
 			</div>
 			<div style="margin:0px 35px;"class="grid1">
 				<h2>Our History</h2>
 				<img src="images/1page_img5.jpg">
-				<p>We at Ceruttis have over 40 years experience within the catering industry and are confident of the service we provide.Here at Ceruttis our team of highly trained chefs are proud and committed to providing top quality food of the highest standard and are able to cater for all tastes.</p>
+				<p><b></b>We at Ceruttis have over 40 years experience within the catering industry and are confident of the service we provide.Here at Ceruttis our team of highly trained chefs are proud and committed to providing top quality food of the highest standard and are able to cater for all tastes.</b></p>
 			</div>
 			<div class="grid1">
 				<h2>Our Events</h2>
