--- a/Events.html
+++ b/Events.html
@@ -138,7 +138,7 @@ But it's also made serving it a growing pain for many restaurants. The cost of s
 					<li class="submemu"><a href="about.html">About</a></li>
 					<li class="submemu"><a href="Events.html">Events</a></li>
 					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="Menu.html">Menu</a></li>
+					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
