--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 					<li class="submemu"><a href="about.html">About</a></li>
 					<li class="submemu"><a href="Events.html">Events</a></li>
 					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="Menu.html">Menu</a></li>
+					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -114,7 +114,7 @@ Our approach towards the operation of the restaurant is truly cooperative. We be
 					<li class="submemu"><a href="about.html">About</a></li>
 					<li class="submemu"><a href="Events.html">Events</a></li>
 					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="Menu.html">Menu</a></li>
+					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
