--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<li class="submemu"><a href="about.html">About</a></li>
 					<li class="submemu"><a href="Events.html">Events</a></li>
 					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="Menu.html">Menu</a></li>
+					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>				</ul>
 			</div>
 			<div class="copyrights">
