--- a/Events.html
+++ b/Events.html
@@ -63,8 +63,8 @@
 				<ul>
 					<li class="current"><a href="index.html">Home</a></li>
 					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
+					<li class="submemu"><a href="events.html">Events</a></li>
+					<li class="submemu"><a href="gallery.html">Gallery</a></li>
 					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>
 				</ul>
@@ -136,8 +136,8 @@ But it's also made serving it a growing pain for many restaurants. The cost of s
 				<ul>
 					<li class="current"><a href="index.html">Home</a></li>
 					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
+					<li class="submemu"><a href="events.html">Events</a></li>
+					<li class="submemu"><a href="gallery.html">Gallery</a></li>
 					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>
 				</ul>
