--- a/Gallery.html
+++ b/Gallery.html
@@ -65,7 +65,7 @@
 					<li class="submemu"><a href="about.html">About</a></li>
 					<li class="submemu"><a href="Events.html">Events</a></li>
 					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="Menu.html">Menu</a></li>
+					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -106,7 +106,7 @@
 					<li class="submemu"><a href="about.html">About</a></li>
 					<li class="submemu"><a href="Events.html">Events</a></li>
 					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="Menu.html">Menu</a></li>
+					<li class="submemu"><a href="menu.html">Menu</a></li>
 					<li class="submemu"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
