--- a/contact.html
+++ b/contact.html
@@ -75,16 +75,15 @@
 		<div class="grids">
 			<div class="contact">
 <center>
-<div class="grids">
+	
 	<h4>The Restaurant "Rosmarito"</h4><br>
-	<span>Marakosa</span><br>
-	<span>Franciskapolle </span><br>
-	<span>Telephone: +019 484 178 2811 </span> <br>
-	<span>FAX: +019 237 198 2371</span>
-	<span>email:<a href=""> </a></span>
+	<span><i></i>Marakosa</i></span><br>
+	<span><i>Franciskapolle</i></span><br>
+	<span><i>Telephone: +019 484 178 2811</i></span> <br>
+	<span><b></b>FAX: +019 237 198 2371</b></span>
+	<span></b>email:<a>rezervation@rosmartio.it</b></a></span>
 	</div>
 	</div>
-	<div class="slider-2">
 </ceneter>
  </form>
 	<div class="clear"> </div>
