--- a/index.html
+++ b/index.html
@@ -1,130 +1,136 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Rosmarito</title>
+<title>EVF Studentu Pašpārvalde</title>
+<link rel="shortcut icon" type="image/x-icon" href="images/tabimage.png" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/bjqs.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/demo.css" rel="stylesheet" type="text/css"  media="all" />
-<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Aguafina+Script' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Stalemate|Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300' rel='stylesheet' type='text/css'>
- 
-		<script type="text/javascript">
-		  $(window).load(function() {
-				$('.flexslider').flexslider({
-				  animation: "slide"
-				});
-				
-				$('.main-menu').prepend('<div id="menu-icon">Menu</div>');
-				/* toggle nav */
-				$("#menu-icon").on("click", function(){
-					$(".sf-menu").slideToggle();
-					$(this).toggleClass("active");
-				});	
-			 });
-	 </script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="js/bjqs-1.3.min.js"></script>
-<script src="js/libs/jquery.secret-source.min.js"></script>
-
-    <script type="text/javascript">
-    jQuery(function($) {
-
-        $('.secret-source').secretSource({
-            includeTag: false
-        });
-
-    });
-    </script>
-    <script class="secret-source">
-        jQuery(document).ready(function($) {
-
-          $('#banner-fade').bjqs({
-            height      : 430,
-            width       :1000,
-            responsive  : true
-          });
-
-        });
-    </script>
+<meta name="keywords" content="Lobex Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+<script src="js/jquery.min.js"></script>
 </head>
 <body>
-	<div class="wrap">
-		<div class="header">
-			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" title="logo"/></a>
-			</div>
+<!-- banner -->
+	<div class="banner">
+		<div class="banner-top">
+				<div class="logo">
+					<a href="index.html"><img src="images/logo.png" class="img-responsive" alt="" /></a>
+				</div>
+				<div class="social">
+					<ul>
+						<li><a href="#"><i class="star"></i></a></li>
+						<li><a href="#"><i class="cam"></i></a></li>
+						<li><a href="#"><i class="vid"></i></a></li>
+						<li><a href="https://www.facebook.com/LUEVFSP"><i class="fb"></i></a></li>
+						<li><a href="https://twitter.com/EVFSP"><i class="twt"></i></a></li>
+					</ul>
+				</div>
+				<div class="banner-info">
+					<h2>Latvijas Universitātes</h2>
+					<h2>Ekonomikas  un Vadības fakultātes</h2>
+					<h1>Studentu pašpārvalde</h1>
+				</div>
 		</div>
-		<div class="top-menu">
-			<ul>
-				<li class="current"><a href="index.html">Home</a></li>
-				<li class="submemu"><a href="about.html">About</a></li>
-				<li class="submemu"><a href="Events.html">Events</a></li>
-				<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-				<li class="submemu"><a href="menu.html">Menu</a></li>
-				<li class="submemu"><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-		<div class="clear">
-			
-		</div>
-			<div class="img-slider">
-			<div id="container">
- 	 <!--  Outer wrapper for presentation only, this can be anything you like -->
-      <div id="banner-fade">
-      	<!-- start Basic Jquery Slider -->
-        <ul class="bjqs">
-          <li><img src="images/slide1.jpg"/></li>
-          <li><img src="images/slide2.jpg"/></li>
-          <li><img src="images/slide3.jpg"/></li>
-        </ul>
-        <!-- end Basic jQuery Slider -->
-        </div>
 	</div>
-		<div class="grids">
-			<div class="grid1">
-				<h2>Welcome!</h2>
-				<img src="images/1page_img1.jpg">
-				<p><i></i>The Rio is a fish restaurant catering for the take away trade as well providing restaurant facilities. The fish as you would expect is freshly caught and you can tell!.,. Situated about 50 yards from the harbour side, you are assured of quality meal in this lovely little place.They try very hard to make you welcome and you can feel it - enjoy.</i></p>
+	<div class="banner-bottom">
+		<div class="container">
+				<div class="head-nav">
+					<span class="menu"> </span>
+						<ul class="cl-effect-15">
+							<li class="active" ><a href="index.html">SĀKUMS</a></li>
+							<li><a href="about.html" data-hover="PAR MUMS">PAR MUMS</a></li>
+							<li><a href="404.html" data-hover="........">........</a></li>
+							<li><a href="portfolio.html" data-hover="GALERIJA">GALERIJA</a></li>
+							<li><a href="contact.html" data-hover="KONTAKTI">KONTAKTI</a></li>
+							
+							<div class="clearfix"> </div>
+						</ul>
+				</div>
+					<div class="clearfix"> </div>
+					<!-- script-for-nav -->
+					<script>
+						$( "span.menu" ).click(function() {
+						  $( ".head-nav ul" ).slideToggle(300, function() {
+							// Animation complete.
+						  });
+						});
+					</script>
+				<!-- script-for-nav --> 	
+		</div>
+	</div>
+	<!-- banner -->
+	<!-- sed -->
+	<div class="sed">
+		<div class="container">
+			<div class="sed1">
+				<div class="col-md-4 sed-top">
+					<div class="sed-left">
+						<div class="sed-con">
+							<i class="han"></i>
+						</div>
+						<div class="sed-data">
+							<h3>Sed viverra lectus</h3>
+							<h4>Vestibulum viverra ante</h4>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+					<p>Pellentesque fermentum  lipsu interdum ipsum, ut gravida justo sollicit ed sit am cenas dignissim ante vel enim hendrerit </p>
+					<a href="info1.html" class="read">READ ...</a>
+				</div>
+				<div class="col-md-4 sed-top">
+					<div class="sed-left">
+						<div class="sed-con">
+							<i class="devi"></i>
+						</div>
+						<div class="sed-data">
+							<h3>Sed viverra lectus</h3>
+							<h4>Vestibulum viverra ante</h4>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+					<p>Pellentesque fermentum  lipsu interdum ipsum, ut gravida justo sollicit ed sit am cenas dignissim ante vel enim hendrerit </p>
+					<a href="#" class="read">READ ...</a>
+				</div>
+				<div class="col-md-4 sed-bottom">
+					<div class="sed-left">
+						<div class="sed-con">
+							<i class="pap"></i>
+						</div>
+						<div class="sed-data">
+							<h3>Sed viverra lectus</h3>
+							<h4>Vestibulum viverra ante</h4>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+					<p>Pellentesque fermentum  lipsu interdum ipsum, ut gravida justo sollicit ed sit am cenas dignissim ante vel enim hendrerit  </p>
+					<a href="#" class="read">READ ...</a>
+				</div>
+					<div class="clearfix"> </div>
 			</div>
-			<div style="margin:0px 35px;"class="grid1">
-				<h2>Our History</h2>
-				<img src="images/1page_img5.jpg">
-				<p><b></b>We at Ceruttis have over 40 years experience within the catering industry and are confident of the service we provide.Here at Ceruttis our team of highly trained chefs are proud and committed to providing top quality food of the highest standard and are able to cater for all tastes.</b></p>
-			</div>
-			<div class="grid1">
-				<h2>Our Events</h2>
-				<img src="images/1page_img2.jpg">
-				<p>If you require a top quality restaurant that provides food at the highest standard in Hull, Beverly and East Yorkshire then contact us.Ceruttis: a leading, well-established company for restaurants, fish restaurants and seafood restaurants.We look forward to hearing from you!</p>
-			</div>
-		</div>	
-		<div class="clear">
 			
 		</div>
-			<br>
-			<br>
-		<div class="clear">
-			
-		</div>
-		<div class="footer">
-			<div class="footer-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>				</ul>
-			</div>
-			<div class="copyrights">
-				<p><b>© 2015 All rights Reserved | Design by<a>jb13042</a></b></p>
-			</div>
-		</div>
-		</div>
-	</body>
-</html>
+	</div>
+	<!-- sed -->
+	<!-- cullam -->
+	<div class="cullam">
+		<div class="container">
 
+		</div>
+	</div>
+	<!-- cullam -->
+	
+	<!-- venenatis -->
+	<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<p>Copyrights © 2015 EVF SP All rights reserved | Designed by <a>Janis Bukovskis</a></p>
+		</div>
+	</div>
+	<!-- footer -->
+</html>
+</body>
