--- a/contact.html
+++ b/contact.html
@@ -1,121 +1,89 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Rosmarito</title>
+<title>EVF Studentu Pašpārvalde</title>
+<link rel="shortcut icon" type="image/x-icon" href="images/tabimage.png" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/bjqs.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/demo.css" rel="stylesheet" type="text/css"  media="all" />
-<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Aguafina+Script' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Stalemate|Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300' rel='stylesheet' type='text/css'>
- 
-		<script type="text/javascript">
-		  $(window).load(function() {
-				$('.flexslider').flexslider({
-				  animation: "slide"
-				});
-				
-				$('.main-menu').prepend('<div id="menu-icon">Menu</div>');
-				/* toggle nav */
-				$("#menu-icon").on("click", function(){
-					$(".sf-menu").slideToggle();
-					$(this).toggleClass("active");
-				});	
-			 });
-	 </script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="js/bjqs-1.3.min.js"></script>
-<script src="js/libs/jquery.secret-source.min.js"></script>
-
-    <script type="text/javascript">
-    jQuery(function($) {
-
-        $('.secret-source').secretSource({
-            includeTag: false
-        });
-
-    });
-    </script>
-    <script class="secret-source">
-        jQuery(document).ready(function($) {
-
-          $('#banner-fade').bjqs({
-            height      : 430,
-            width       :1000,
-            responsive  : true
-          });
-
-        });
-    </script>
+<meta name="keywords" content="Lobex Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+<script src="js/jquery.min.js"></script>
 </head>
-	<body>
-		<div class="wrap">
-			<div class="header">
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" title="logo"/></a>
+<body>
+<!-- banner -->
+	<div class="banner-bottom">
+		<div class="container">
+				<div class="head-nav">
+					<span class="menu"> </span>
+						<ul class="cl-effect-15">
+							<li><a href="index.html"  data-hover="SĀKUMS">SĀKUMS</a></li>
+							<li><a href="about.html" data-hover="PAR MUMS">PAR MUMS</a></li>
+							<li><a href="404.html" data-hover="........">........</a></li>
+							<li><a href="portfolio.html" data-hover="GALERIJA">GALERIJA</a></li>
+							<li    class="active"><a href="contact.html">KONTAKTI</a></li>
+								<div class="clearfix"> </div>
+						</ul>
 				</div>
-			</div>
-			<div class="top-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="clear">
-				
-			</div>
-		<div class="grids">
-			<div class="contact">
-<center>
+					<div class="clearfix"> </div>
+						<!-- script-for-nav -->
+					<script>
+						$( "span.menu" ).click(function() {
+						  $( ".head-nav ul" ).slideToggle(300, function() {
+							// Animation complete.
+						  });
+						});
+					</script>
+				<!-- script-for-nav --> 	
+		</div>
+	</div>
+	<!-- banner -->
+	<!-- contact -->
+	<div class="container">
+	<div class="contact-content">
+		     <div class="contact-info">
+			 <h2>Contact</h2>
+		     </div>
+			 <div class="contact-details">				 
+		  </div>
+		  <div class="contact-details">
+			  <div class="col-md-6 contact-map">
+				 <h4>Kontakti</h4>
+				 			 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2176.065562941584!2d24.11342320156844!3d56.947677980795994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfd47146029d%3A0x60fdd5c2cd346f00!2sEkonomikas+un+vad%C4%ABbas+fakult%C4%81te%2C+Aspazijas+bulv%C4%81ris+5%2C+Centra+rajons%2C+R%C4%ABga%2C+LV-1050%2C+Latvija!5e0!3m2!1slv!2sus!4v1444859005675" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			  </div>
+			  <div class="col-md-6 company_address">		 
+					<h4>GET IN TOUCH</h4>
+					<p>Aspazijas 5.(ieeja no pagalma)</p>
+					<p> Rīga Latvija</p>
+					<p>Tel.nr.:67034797</p>
+					<p>Email: <a href="info@evf.lv">info@evf.lv</a></p>
+					<p>Follow on: <a href="https://www.facebook.com/LUEVFSP">facebook</a>, <a href="https://twitter.com/EVFSP">twitter</a></p>
+			 </div>
+			  <div class="clearfix"></div>
+	     </div>		 
+	 </div>
+	 </div>
+
+	<!-- contact -->
+	<!-- cullam -->
+	<div class="cullam">
+		<div class="container">
+			
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+	<!-- cullam -->
 	
-	<h4>The Restaurant "Rosmarito"</h4><br>
-	<span><i></i>Marakosa</i></span><br>
-	<span><i>Franciskapolle</i></span><br>
-	<span><i>Telephone: +019 484 178 2811</i></span> <br>
-	<span><b></b>FAX: +019 237 198 2371</b></span>
-	<span></b>email:<a>rezervation@rosmartio.it</b></a></span>
+	<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<p>Copyrights © 2015 EVF SP All rights reserved | Designed by <a>Janis Bukovskis</a></p>
+		</div>
 	</div>
-	</div>
-</ceneter>
- </form>
-	<div class="clear"> </div>
-
-</div>
-
-			</div>
-			
-		</div>
-		<div class="clear">
-			
-		</div>
-		<div class="footer">
-			<div class="footer-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="copyrights">
-								<p>© 2015 All rights Reserved | Design by<a>jb13042</a></p>
-			</div>
-			
-		</div>
-			
-			
-		</div>
-
-	</body>
+	<!-- footer -->
 </html>
-
+</body>
