--- a/about.html
+++ b/about.html
@@ -1,132 +1,99 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Rosmarito</title>
+<title>EVF Studentu Pašpārvalde</title>
+<link rel="shortcut icon" type="image/x-icon" href="images/tabimage.png" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/bjqs.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/demo.css" rel="stylesheet" type="text/css"  media="all" />
-<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Aguafina+Script' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Stalemate|Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300' rel='stylesheet' type='text/css'>
- 
-		<script type="text/javascript">
-		  $(window).load(function() {
-				$('.flexslider').flexslider({
-				  animation: "slide"
-				});
-				
-				$('.main-menu').prepend('<div id="menu-icon">Menu</div>');
-				/* toggle nav */
-				$("#menu-icon").on("click", function(){
-					$(".sf-menu").slideToggle();
-					$(this).toggleClass("active");
-				});	
-			 });
-	 </script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="js/bjqs-1.3.min.js"></script>
-<script src="js/libs/jquery.secret-source.min.js"></script>
-
-    <script type="text/javascript">
-    jQuery(function($) {
-
-        $('.secret-source').secretSource({
-            includeTag: false
-        });
-
-    });
-    </script>
-    <script class="secret-source">
-        jQuery(document).ready(function($) {
-
-          $('#banner-fade').bjqs({
-            height      : 430,
-            width       :1000,
-            responsive  : true
-          });
-
-        });
-    </script>
+<meta name="keywords" content="Lobex Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+<script src="js/jquery.min.js"></script>
 </head>
-	<body>
-		<div class="wrap">
-			<div class="header">
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" title="logo"/></a>
+<body>
+<!-- banner -->
+	<div class="banner-bottom">
+		<div class="container">
+				<div class="head-nav">
+					<span class="menu"> </span>
+						<ul class="cl-effect-15">
+							<li><a href="index.html"  data-hover="SĀKUMS" >SĀKUMS</a></li>
+							<li   class="active"><a href="about.html">PAR MUMS</a></li>
+							<li><a href="404.html" data-hover="........">........</a></li>
+							<li><a href="portfolio.html" data-hover="GALERIJA">GALERIJA</a></li>
+							<li><a href="contact.html" data-hover="KONTAKTI">KONTAKTI</a></li>
+								<div class="clearfix"> </div>
+						</ul>
 				</div>
-			</div>
-			<div class="top-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="clear">
-				
-			</div>
-			<div class="img-slider">
-			<div id="container">
- 	 <!--  Outer wrapper for presentation only, this can be anything you like -->
+					<div class="clearfix"> </div>
+						<!-- script-for-nav -->
+					<script>
+						$( "span.menu" ).click(function() {
+						  $( ".head-nav ul" ).slideToggle(300, function() {
+							// Animation complete.
+						  });
+						});
+					</script>
+				<!-- script-for-nav --> 	
+		</div>
 	</div>
-		<div class="about-grids">
-			<div class="about-grid1">
-				<h3>ABOUT US</h3>
-				<img src="images/1page_img4.jpg" title="img1"/>
-				<p>Opened in 1999, Restaurant Rosmarito is a casual fine dining restaurant, offering eclectic American cuisine and warm hospitality in a rustic historically preserved building. A high, open beam ceiling, exposed brick and concrete floors display the original space, while an open kitchen, banquette seating and gentle lighting contribute to an intimate and contemporary feel.
-We specialize in three course tasting menus, allowing the customer to select any three dishes from the menu for $52 per person. A la Carte dining is also available.
-Our food is sourced from top quality seasonal ingredients, featuring a high percentage of local and organic products. Our menu changes every six to eight weeks, offering a mix of new and signature dishes. We consider Rosmarito to be a truly “American” restaurant honoring many different cooking traditions and interpreting them with our unique creative vision.
-Inspired by great artisanal foods of the world. We craft all of our stocks, sauces, breads, pastries and ice creams from scratch on a daily basis. We also strive to support other artisanal producers when purchasing wine, cheese, honey and many other ingredients.
-Our approach towards the operation of the restaurant is truly cooperative. We believe that every single member of our staff is integral to our success and pay sustainable living wages to all employees, offering medical benefits and profit sharing to all full time employees.</p>
-			<p style="font-family: 'Aguafina Script', cursive;font-size:37px;margin:20px 0px;text-align:center;">"Pelitore malte pasta porterino asalino el imo tragole.."</p>
-<p>Restaurant Rosmarito has been voted Best New Restaurant, Best Restaurant, Best Neighborhood Cafe, and Best Chef Minneapolis by City Pages; and received four stars from the Star Tribune. It has also received recognition from Mpls. St. Paul Magazine, Minnesota Monthly, The Washington Post, Bon Appetit, and Gourmet. </p>
-			</div>
+	<!-- banner -->
+	<!-- about -->
+	<div class="container">
+	<div class="about-content">
+		 <h2>About</h2>
+		 <div class="about-section">
+			 <div class="about-grid">
+				 <h3>WHY I STARTED THIS BLOG?</h3>
+				 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+				 It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+				 versions of Lorem Ipsum.</p>
+				 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages 
+				 and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+			 </div>
+			 <div class="about-grid2">
+				 <h3>WHY YOU SHOULD READ THIS BLOG?</h3>
+				 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+				 It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+				 versions of Lorem Ipsum.</p>	
+				 <ul>
+					 <li><a href="#">Always free from repetition</a></li>
+					 <li><a href="#">Vestibulum rhoncus nibh quis dui iaculis.</a></li>
+					 <li><a href="#">The standard chunk of Lorem Ipsum</a></li>
+					 <li><a href="#">In consequat dolor in lorem egestas ultric.</a></li>
+					 <li><a href="#">Ultrices rhoncus nibh quis dui.</a></li>
+				 </ul>	
+			 </div>
+			 <div class="who-iam">
+				 <h3>WHO THE IAM?</h3>
+				 <div class="man-info">
+					 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. </p>
+				     <h4>Some facts about me.</h4>  
+					 <li>Nullam at turpis a orci pretium pharetra.</li>
+					 <li>Curabitur tincidunt purus mollis facili.</li>
+					 <li>Mauris a nulla ac est tincidunt interdum.</li>
+					 <li>Pellentesque vel enim nec urna mollis.</li>
+					 <li>Integer interdum risus et scelerisque volutpat.</li>
+				 </div>
+				 <div class="man-pic">
+				 <img src="images/p2.jpg" class="img-responsive" alt="" />
+				 </div>
+				 <div class="clearfix"></div>
+			 </div>			 
+		  </div>		 
+</div>
+</div>
+	<!-- about -->
+	<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<p>Copyrights © 2015 EVF SP All rights reserved | Designed by <a>Janis Bukovskis</a></p>
 		</div>
-		
-		<div class="about-staff">
-			<h4>OUR STAFF</h4>
-			<ul>
-				<li><img src="images/staff1.jpg" title="staff1"/><h5>Carrie Riggs – Pastry Chef </h5>
-					<p>
-" We also strive to support other artisanal producers when purchasing wine, cheese, honey and many other ingredients."</p>
-				</li>
-				<li><img src="images/staff2.jpg" title="staff1"/><h5>Alexander Roberts - Executive Chef / Proprietor</h5>
-					<p>
-"Inspired by great artisanal foods of the world. We craft all of our stocks, sauces, breads, pastries and ice creams from scratch on a daily basis. "</p>
-				</li>
-			</ul>
-		</div>
-		
-		<div class="clear">
-			
-		</div>
-		<div class="footer">
-			<div class="footer-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="copyrights">
-							<p>© 2015 All rights Reserved | Design by<a>jb13042</a></p>
-			</div>
-			
-		</div>
-			
-			
-		</div>
-
-	</body>
+	</div>
+	<!-- footer -->
 </html>
-
+</body>
