--- a/menu.html
+++ b/menu.html
@@ -1,230 +1,73 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Rosmarito</title>
+<title>EVF Studentu Pašpārvalde</title>
+<link rel="shortcut icon" type="image/x-icon" href="images/tabimage.png" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/bjqs.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/demo.css" rel="stylesheet" type="text/css"  media="all" />
-<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Aguafina+Script' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Stalemate|Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300' rel='stylesheet' type='text/css'>
- 
-		<script type="text/javascript">
-		  €(window).load(function() {
-				€('.flexslider').flexslider({
-				  animation: "slide"
-				});
-				
-				€('.main-menu').prepend('<div id="menu-icon">Menu</div>');
-				/* toggle nav */
-				€("#menu-icon").on("click", function(){
-					€(".sf-menu").slideToggle();
-					€(this).toggleClass("active");
-				});	
-			 });
-	 </script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="js/bjqs-1.3.min.js"></script>
-<script src="js/libs/jquery.secret-source.min.js"></script>
-
-    <script type="text/javascript">
-    jQuery(function(€) {
-
-        €('.secret-source').secretSource({
-            includeTag: false
-        });
-
-    });
-    </script>
-    <script class="secret-source">
-        jQuery(document).ready(function(€) {
-
-          €('#banner-fade').bjqs({
-            height      : 430,
-            width       :1000,
-            responsive  : true
-          });
-
-        });
-    </script>
+<meta name="keywords" content="Lobex Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+<script src="js/jquery.min.js"></script>
 </head>
-	<body>
-		<div class="wrap">
-			<div class="header">
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" title="logo"/></a>
+<body>
+<!-- banner -->
+	<div class="banner-bottom">
+		<div class="container">
+
+				<div class="head-nav">
+					<span class="menu"> </span>
+						<ul class="cl-effect-15">
+							<li><a href="index.html"  data-hover="SĀKUMS">SĀKUMS</a></li>
+							<li><a href="about.html" data-hover="PAR MUMS">PAR MUMS</a></li>
+							<li  class="active" ><a href="404.html">........</a></li>
+							<li><a href="portfolio.html" data-hover="GALERIJA">GALERIJA</a></li>
+							<li><a href="contact.html" data-hover="KONTAKTI">KONTAKTI</a></li>
+								<div class="clearfix"> </div>
+						</ul>
 				</div>
-			</div>
-			<div class="top-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<br>
-			<div class="img-slider">
-			<div id="container">
- 	 <!--  Outer wrapper for presentation only, this can be anything you like -->
-
-		<div class="grids">
-			<div class="lists">
-			<div class="heading">
-				<h2>Our Menu</h2>
-			<br>
-			<br>
-			</div>
-			<div class="OurMenu">
-				<ul>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>									
-				</ul>
-			</div>
-			<div class="OurMenu">
-				<ul>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>									
-				</ul>
-			</div>
-			<div class="OurMenu">
-				<ul>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>									
-				</ul>
-			</div>
-			<div class="OurMenu">
-				<ul style="padding-left:22px;">
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li> </li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>
-					<li>Esuada orci.onec sit amet<span>€7.45</span></li>									
-				</ul>
-			</div>
-			<br>
-			<br>
-			<br>
-			<br>
-			<div class="clear"> </div>
-			<div class="heading">
-				<h2 style="margin:40px;" >Wine List</h2>
-			</div>
-			<div class="OurMenu">
-				<ul>
-					<li>La Palma Orci Merloiti<span>€27.45</span></li>
-					<li> </li>
-					<li>La Palma Balo Interno<span>€32.25</span></li>
-					<li>La Palma Karma Silcio<span>€43.15</span></li>
-					<li> </li>
-					<li>La Palma Selm Sasitol<span>€21.25</span></li>
-					<li> </li>							
-				</ul>
-			</div>
-			<div class="OurMenu">
-				<ul>
-					<li>Sa Pelito Orci Merloit<span>€17.45</span></li>
-					<li> </li>
-					<li>Sa Kaspa Beo Sintern<span>€63.25</span></li>
-					<li>Sa Remar Salmo Silco<span>€33.15</span></li>
-					<li> </li>
-					<li>Sa Kalma Elmo Parmil<span>€21.25</span></li>
-					<li> </li>									
-				</ul>
-			</div>
-			<div class="OurMenu">
-				<ul>
-					<li>De Rome Pale Oritoli<span>€27.45</span></li>
-					<li> </li>
-					<li>Pelimole Kartols Esiti<span>€61.25</span></li>
-					<li>Kappa ortoles paiero<span>€13.15</span></li>
-					<li> </li>
-					<li>Der Palma Selm Sasiti<span>€21.25</span></li>
-					<li> </li>									
-				</ul>
-			</div>
-			<div class="OurMenu">
-				<ul>
-					<li>De Rome Pale Oritoli<span>€27.45</span></li>
-					<li> </li>
-					<li>Pelimole Kartols Esiti<span>€61.25</span></li>
-					<li>Kappa ortoles paiero<span>€13.15</span></li>
-					<li> </li>
-					<li>Der Palma Selm Sasiti<span>€21.25</span></li>
-					<li> </li>									
-				</ul>
-			</div>
-			</div>
-		</div>	
-		<div class="clear">
+					<div class="clearfix"> </div>
+						<!-- script-for-nav -->
+					<script>
+						$( "span.menu" ).click(function() {
+						  $( ".head-nav ul" ).slideToggle(300, function() {
+							// Animation complete.
+						  });
+						});
+					</script>
+				<!-- script-for-nav --> 	
 		</div>
-		<br><br>
-		<div class="footer">
-			<div class="footer-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
+	</div>
+	<!-- banner -->
+	<!-- sed -->
+	<div class="main">
+		<div class="container">
+			<div class="error-404 text-center">
+				<h1>404</h1>
+				<p>this link dead link</p>
+				<a class="b-home" href="index.html">Back to Home</a>
 			</div>
-			<div class="copyrights">
-								<p>© 2015 All rights Reserved | Design by<a>jb13042</a></p>
-			</div>
+		</div>
+	</div>
+	<!-- sed -->
+	<!-- cullam -->
+	<div class="cullam">
+		<div class="container">
 			
 		</div>
-			
-			
+	</div>
+	<!-- cullam -->
+	
+	<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<p>Copyrights © 2015 EVF SP All rights reserved | Designed by <a>Janis Bukovskis</a></p>
 		</div>
-
-	</body>
+	</div>
+	<!-- footer -->
 </html>
-
+</body>
